--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,5 @@
 
 html {font-size: 100%;} /*16px*/
-.main {
-  margin-top: 100px;
-}
 body {
   background-color: white;
   font-family: 'Roboto', sans-serif;
@@ -10,10 +7,112 @@ body {
   line-height: 1.65;
   color: #333;
 }
+.page {
+  margin-top: 100px;
+  min-height: 100vh;
+  background-color: white;
+  padding: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 940px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
 
+@media screen and (max-width: 991px) {
+  .page {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
 .page-enter-active, .page-leave-active {
   transition: all .4s;
 }
 .page-enter, .page-leave-active {
   opacity: 0
+}
+.iframe {
+  position: fixed;
+  top: 100px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 95vh;
+  border: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  /* z-index: 999999; */
+}
+
+.intro {
+  background: #959595;
+}
+.land {
+  background: #954c97;
+}
+.reefs {
+  background: #2ca2db;
+}
+.water {
+  background: #1dbbb0;
+}
+.vegetation {
+  background: #7fb842;
+}
+.population {
+  background: #fab317;
+}
+.infrastructure {
+  background: #ee5525;
+}
+.conservation {
+  background: #be2326;
+}
+.culture {
+  background: #901c21;
+}
+.introcolor {
+  color: #959595;
+  text-transform: uppercase;
+}
+.landcolor {
+  color: #954c97;
+    text-transform: uppercase;
+
+}
+.reefscolor {
+  color: #2ca2db;
+    text-transform: uppercase;
+
+}
+.watercolor {
+  color: #1dbbb0;
+    text-transform: uppercase;
+
+}
+.vegetationcolor {
+  color: #7fb842;
+    text-transform: uppercase;
+
+}
+.populationcolor {
+  color: #fab317;
+    text-transform: uppercase;
+
+}
+.infrastructurecolor {
+  color: #ee5525;
+    text-transform: uppercase;
+
+}
+.conservationcolor {
+  color: #be2326;
+    text-transform: uppercase;
+
+}
+.culturecolor {
+  color: #901c21;
+    text-transform: uppercase;
+
 }
