--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,22 @@
+@import "~assets/css/style.css";
+@import "~assets/css/responsive.css";
 
 html {font-size: 100%;} /*16px*/
-body {
+/* body {
   background-color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Relaway', sans-serif;
   font-weight: 400;
   line-height: 1.65;
+} */
+body {
+  background-color: white;
+  font-family: 'Open Sans', sans-serif;
   color: #333;
+}
+
+h1, h2, h3, h4, h5, h6 {
+ font-family: 'Trend Sans One Regular', sans-serif;
+ font-weight: 700;
 }
 .page {
   margin-top: 100px;
@@ -37,12 +48,11 @@ body {
   bottom: 0;
   right: 0;
   width: 100%;
-  height: 95vh;
+  height:90vh;
   border: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  /* z-index: 999999; */
 }
 
 .intro {
@@ -114,5 +124,31 @@ body {
 .culturecolor {
   color: #901c21;
     text-transform: uppercase;
-
+}
+.caption {
+  position: absolute;
+  left: 0;
+  top: 35%;
+  width: 100%;
+  text-align: center;
+  letter-spacing: 8px;
+  color: #fff;
+  z-index: 1;
+  text-shadow: 1px 6px 10px rgb(0 0 0);
+  font-size: 2rem;
+}
+.border {
+  color: white;
+}
+.subtitle {
+  font-size: 1.4rem;
+  font-style: italic;
+  font-family: "Raleway";
+  letter-spacing: 3px;
+  font-weight: 500;
+}
+.ant-tabs-nav-wrap {
+  margin-bottom: -1px;
+  text-align: center;
+  overflow: hidden;
 }
