3 feedback patches done

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,8 +6,8 @@
 	.flag-card-box ul.card-list li .text-box h3{ font-size:15px;}
 
 	.gallery-box { padding-left: 65px !important; padding-right: 65px !important;}
-	/* .slick-next{ right:-10px !important;}
-	.slick-prev{ left:-10px !important;} */
+/* .slick-next{ right:-10px !important;} */
+	/* .slick-prev{ left:-10px !important;} */
 
 	.bnr-frame .innr-box h4{ font-size:22px;}
 
@@ -32,6 +32,13 @@
 	#object7 { left: 50% !important; top: 390px !important;}
 	#object7 img { width: 210px;}
 
+	.flag-card-box ul.card-list li span.img img {
+		height: 230px;
+	}
+	.flag-card-box ul.card-list li .text-box {
+		right:auto;
+		bottom: 20px;
+	}
 
 }
 
@@ -46,7 +53,6 @@
 	.video-box iframe{ height:350px !important;}
 
 	.flag-card-box ul.card-list li{ width:33.3%;}
-
 
 	.flag-card-frame{ padding-bottom:40px;}
 
@@ -81,7 +87,13 @@
 	#object7 img { width: 180px;}
 
 
-
+	.flag-card-box ul.card-list li span.img img {
+		height: auto;
+	}
+	.flag-card-box ul.card-list li .text-box {
+		right:auto;
+		bottom: 20px;
+	}
 
 }
 
@@ -116,6 +128,7 @@
 
 	.bnr-frame .innr-box img { max-width: 100px;}
 	.bnr-frame .innr-box h1{ font-size:25px;}
+	h1{ font-size:25px;}
 
 	.innr-link p { transform-origin:center; transform:translateX(16px);}
 
@@ -192,6 +205,11 @@
 	#object5 .innr-link { left: -81px; top: -55px;}
 	#object6 .innr-link { left: -110px; top: -45px;}
 	#object7 .innr-link { left: -70px; top: -15px;}
-
-
+	.flag-card-box ul.card-list li span.img img {
+		height: auto;
+	}
+	.flag-card-box ul.card-list li .text-box {
+		right:auto;
+		bottom: 40px;
+	}
 }
