--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,9 @@
 @import "~assets/css/style.css";
 @import "~assets/css/responsive.css";
 
-html {font-size: 100%;} /*16px*/
+html {
+  font-size: 100%;
+} /*16px*/
 /* body {
   background-color: white;
   font-family: 'Relaway', sans-serif;
@@ -10,13 +12,18 @@ html {font-size: 100%;} /*16px*/
 } */
 body {
   background-color: white;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #333;
 }
 
-h1, h2, h3, h4, h5, h6 {
- font-family: 'Trend Sans One Regular', sans-serif;
- font-weight: 700;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Trend Sans One Regular", sans-serif;
+  font-weight: 700;
 }
 .page {
   margin-top: 100px;
@@ -35,11 +42,13 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: 20px;
   }
 }
-.page-enter-active, .page-leave-active {
-  transition: all .4s;
+.page-enter-active,
+.page-leave-active {
+  transition: all 0.4s;
 }
-.page-enter, .page-leave-active {
-  opacity: 0
+.page-enter,
+.page-leave-active {
+  opacity: 0;
 }
 .iframe {
   position: fixed;
@@ -48,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   right: 0;
   width: 100%;
-  height:90vh;
+  height: 90vh;
   border: none;
   margin: 0;
   padding: 0;
@@ -88,42 +97,35 @@ h1, h2, h3, h4, h5, h6 {
 }
 .landcolor {
   color: #954c97;
-    text-transform: uppercase;
-
+  text-transform: uppercase;
 }
 .reefscolor {
   color: #2ca2db;
-    text-transform: uppercase;
-
+  text-transform: uppercase;
 }
 .watercolor {
   color: #1dbbb0;
-    text-transform: uppercase;
-
+  text-transform: uppercase;
 }
 .vegetationcolor {
   color: #7fb842;
-    text-transform: uppercase;
-
+  text-transform: uppercase;
 }
 .populationcolor {
   color: #fab317;
-    text-transform: uppercase;
-
+  text-transform: uppercase;
 }
 .infrastructurecolor {
   color: #ee5525;
-    text-transform: uppercase;
-
+  text-transform: uppercase;
 }
 .conservationcolor {
   color: #be2326;
-    text-transform: uppercase;
-
+  text-transform: uppercase;
 }
 .culturecolor {
   color: #901c21;
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 .caption {
   position: absolute;
